[package]
name = "actix-web-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
diesel = { version = "2.2.0", features = ["postgres", "r2d2"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
pq-sys = { version = "0.6", features = ["bundled"] }
# openssl-sys = { version = "0.9.100", features = ["vendored"] } 
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
pkg-config = "0.3.19"
